<resources>
    <string name="app_name">DemoSqlLite</string>
    <string name="textViewName">Họ và tên:</string>
    <string name="textViewCourseName">Tên lớp học:</string>
    <string name="textViewPhoneNumber">Số điện thoại:</string>
    <string name="textViewEmail">Email:</string>
    <string name="textViewTitle">QUẢN LÝ SINH VIÊN</string>
    <string name="textViewTitleCreateStudent">TẠO MỚI SINH VIÊN</string>
    <string name="textViewTitleCreateCourse">TẠO MỚI LỚP HỌC</string>
    <string name="textViewTitleListStudent">DANH SÁCH SINH VIÊN</string>
    <string name="textViewTitleListCourse">DANH SÁCH LỚP HỌC</string>
    <string name="textViewTitleEditStudent">CẬP NHẬT THÔNG TIN SINH VIÊN</string>
    <string name="textViewTitleDeleteStudent">XÓA SINH VIÊN</string>
    <string name="textViewTitleStudentDetail">THÔNG TIN SINH VIÊN</string>
    <string name="textViewTitleCourseDetail">THÔNG TIN LỚP HỌC</string>
    <string name="buttonListStudent">Danh sách sinh viên</string>
    <string name="buttonListStudentByCourse">Danh sách sinh viên của lớp</string>
    <string name="buttonListClass">Danh sách lớp học</string>
    <string name="buttonCreateStudent">Tạo mới sinh viên</string>
    <string name="buttonEditStudent">Cập nhật thông tin sinh viên</string>
    <string name="buttonDeleteStudent">Xóa sinh viên</string>
    <string name="buttonCreate">Thêm mới</string>
    <string name="buttonEdit">Cập nhật</string>
    <string name="buttonDelete">Xóa</string>
    <string name="buttonBack">Quay lại</string>
</resources>
